--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,34 +4,30 @@ project(SCS_CPU_Simulator)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# ===== SFML 3 Path =====
 set(SFML_ROOT "C:/Users/Mihai/Documents/UTCN/SFML-3.0.2")
 
 find_package(SFML 3 REQUIRED COMPONENTS System Window Graphics)
 
-# ===== ImGui + ImGui-SFML =====
 set(IMGUI_DIR "${CMAKE_SOURCE_DIR}/external/imgui")
 add_subdirectory(external/imgui-sfml)
 
-# ===== Source Files =====
-# Automatically grab all .cpp files in src/ and src/CPU
 file(GLOB_RECURSE SOURCES
     src/*.cpp
     src/CPU/*.cpp
+    src/CPU/CPU_Controller/*.cpp
+    src/CPU/CPU_Controller/Hazzard_handeling/*.cpp
 )
 
-# ===== Executable =====
 add_executable(SCS_CPU_Simulator ${SOURCES})
 
-# ===== Include Directories =====
 target_include_directories(SCS_CPU_Simulator PRIVATE
     includes
     src
     src/CPU_Controller
+    src/CPU/CPU_Controller/Hazzard_handeling
     ${IMGUI_DIR}
 )
 
-# ===== Link Libraries =====
 target_link_libraries(SCS_CPU_Simulator PRIVATE
     SFML::System
     SFML::Window
